tests/EnvironmentTests/data/DupFunc2Test.xpl
node[] f(node[] x, node[] y) {}
node[] f(node[] x, node[] y) {}
